--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.shoppinglist'
-    compileSdk {
-        version = release(36)
-    }
+    compileSdk 36  // ИСПРАВЛЕНИЕ: Убрана устаревшая функция release()
 
     defaultConfig {
         applicationId "com.example.shoppinglist"
@@ -25,10 +23,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    
     kotlinOptions {
         jvmTarget = '11'
     }
